--- a/音乐2.1
+++ b/音乐2.1
@@ -60,7 +60,7 @@ local function ApplyEnhancedGlowEffect(uiElement, elementType)
     end
 end
 
--- 对抗性属性锁定功能
+-- 对抗性属性锁定功能（仅在非原始代码模式下使用）
 local BoostProtectionManager = {
     Enabled = false,
     ActiveProtections = {}
@@ -498,7 +498,8 @@ local function CreateFullUI()
             table.insert(soundSystem.ActiveSounds, soundName)
             soundSystem.LastSoundName = soundName
             
-            if soundSystem.BoostEnabled then
+            -- 仅在非原始代码模式下启用Boost保护
+            if soundSystem.BoostEnabled and soundSystem.CurrentMode ~= "mode2" then
                 BoostProtectionManager:EnableProtection(soundName)
             end
             
@@ -509,46 +510,39 @@ local function CreateFullUI()
         end
     end
 
-    -- 修改后的遍历模式（M模式）- 完全使用原始核心代码
+    -- 修改后的遍历模式（M模式）- 完全使用原始代码
     local function EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
         -- 检查是否同时启用M模式和Boost模式
         if soundSystem.CurrentMode == "mode2" and soundSystem.BoostEnabled then
-            -- 🚀 完全使用原始核心代码
-            print("🔴 使用完全版Boost核心代码（M模式+Boost）")
+            -- 🚀 完全使用原始核心代码（无任何修改）
+            print("🔴 使用完全原始代码模式（M模式+Boost）")
             
-            -- 完完全全使用原始代码结构
+            -- 完完全全使用原始代码，只替换参数
             local sound = true  -- 固定为true，表示播放
             local ID = "rbxassetid://"..musicID  -- 使用输入的音乐ID
-            local Name = generateEnhancedSoundName(musicID)  -- 使用生成的随机名称
+            local Name = "get troll"  -- 使用原始固定名称
             local Volume = volume  -- 使用输入的音量
             local Pitch = pitch   -- 使用输入的音调
             
             local playedSuccessfully = false
             
-            -- 完完全全使用原始循环结构
+            -- 完完全全使用原始循环结构和逻辑
             for i,v in pairs(game:GetService("Workspace"):GetDescendants()) do
                 if v:IsA("RemoteEvent") and v.Name == "AC6_FE_Sounds" then
                     if sound == true then
-                        -- 完全使用原始代码逻辑，修复循环参数传递
-                        local success = pcall(function()
-                            -- 关键修复：正确传递loopEnabled参数而不是固定值
-                            v:FireServer("newSound", Name, workspace, ID, Pitch, Volume, loopEnabled)
-                            v:FireServer("playSound", Name)
-                        end)
+                        -- 完全使用原始代码，直接触发，无错误处理
+                        v:FireServer("newSound", Name, workspace, ID, Pitch, Volume, loopEnabled)
+                        v:FireServer("playSound", Name)
                         
-                        if success then
-                            playedSuccessfully = true
-                            -- 添加到活动声音列表
-                            table.insert(soundSystem.ActiveSounds, Name)
-                            soundSystem.LastSoundName = Name
-                            
-                            -- 启用Boost保护
-                            BoostProtectionManager:EnableProtection(Name)
-                            
-                            -- 完全按照原始逻辑：如果不启用Twin模式就break
-                            if not soundSystem.TwinMode then
-                                break
-                            end
+                        playedSuccessfully = true
+                        -- 添加到活动声音列表
+                        table.insert(soundSystem.ActiveSounds, Name)
+                        soundSystem.LastSoundName = Name
+                        
+                        -- 原始代码模式下不启用Boost保护
+                        -- 完全按照原始逻辑：如果不启用Twin模式就break
+                        if not soundSystem.TwinMode then
+                            break
                         end
                     end
                 end
@@ -675,7 +669,7 @@ local function CreateFullUI()
         BoostProtectionManager:StopAllProtections()
     end)
 
-    print("✅ 修复版音乐播放器UI已加载 - 循环参数问题已解决！")
+    print("✅ 最终修复版音乐播放器UI已加载 - 完全原始代码模式！")
     return screenGui
 end
 
@@ -687,5 +681,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("🎵 音乐播放器已就绪 - M模式+Boost现在使用完全版核心代码且循环参数正确！")
+    print("🎵 音乐播放器已就绪 - M模式+Boost将使用完全原始代码，无保护机制！")
 end
