--- a/音乐2.1
+++ b/音乐2.1
@@ -117,6 +117,33 @@ function BoostProtectionManager:StopAllProtections()
     print("🔒 所有Boost保护已停止")
 end
 
+-- 新增：创建隐藏文件夹结构的函数
+local function CreateHiddenAudioFolder()
+    -- 创建多级文件夹结构，使音频不易被察觉[6,7](@ref)
+    local mainFolder = workspace:FindFirstChild("EnvironmentAssets")
+    if not mainFolder then
+        mainFolder = Instance.new("Folder")
+        mainFolder.Name = "EnvironmentAssets"  -- 使用普通名称避免怀疑
+        mainFolder.Parent = workspace
+    end
+    
+    local subFolder = mainFolder:FindFirstChild("AmbientSystems")
+    if not subFolder then
+        subFolder = Instance.new("Folder")
+        subFolder.Name = "AmbientSystems"
+        subFolder.Parent = mainFolder
+    end
+    
+    local audioFolder = subFolder:FindFirstChild("AssetCache")
+    if not audioFolder then
+        audioFolder = Instance.new("Folder")
+        audioFolder.Name = "AssetCache"  -- 看起来像资源缓存文件夹
+        audioFolder.Parent = subFolder
+    end
+    
+    return audioFolder
+end
+
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
     screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
@@ -353,7 +380,8 @@ local function CreateFullUI()
             mode2 = Color3.fromRGB(220, 140, 100)
         },
         LastSoundName = nil,
-        TwinMode = false
+        TwinMode = false,
+        UseHiddenFolder = true  -- 新增：控制是否使用隐藏文件夹
     }
     
     -- 更新按钮颜色函数
@@ -434,6 +462,7 @@ local function CreateFullUI()
 
     local function SafeStopSound(soundID)
         local stopped = false
+        -- 搜索所有可能的位置，包括隐藏文件夹[1](@ref)
         for _, location in ipairs({workspace, replicatedStorage}) do
             for _, obj in ipairs(location:GetDescendants()) do
                 if obj:IsA("RemoteEvent") and obj.Name == "AC6_FE_Sounds" then
@@ -489,8 +518,14 @@ local function CreateFullUI()
         local soundName = generateEnhancedSoundName(musicID)
         
         local success = pcall(function()
-            soundSystem.RemoteEvent:FireServer("newSound", soundName, workspace, 
-                              "rbxassetid://"..musicID, pitch, volume, loopEnabled)
+            -- 使用隐藏文件夹作为音频父级[6,7](@ref)
+            local targetParent = workspace
+            if soundSystem.UseHiddenFolder then
+                targetParent = CreateHiddenAudioFolder()
+            end
+            
+            soundSystem.RemoteEvent:FireServer("newSound", soundName, targetParent, 
+                          "rbxassetid://"..musicID, pitch, volume, loopEnabled)
             soundSystem.RemoteEvent:FireServer("playSound", soundName)
         end)
         
@@ -530,8 +565,14 @@ local function CreateFullUI()
             for i,v in pairs(game:GetService("Workspace"):GetDescendants()) do
                 if v:IsA("RemoteEvent") and v.Name == "AC6_FE_Sounds" then
                     if sound == true then
+                        -- 使用隐藏文件夹作为音频父级[6,7](@ref)
+                        local targetParent = workspace
+                        if soundSystem.UseHiddenFolder then
+                            targetParent = CreateHiddenAudioFolder()
+                        end
+                        
                         -- 完全使用原始代码，直接触发，无错误处理
-                        v:FireServer("newSound", Name, workspace, ID, Pitch, Volume, loopEnabled)
+                        v:FireServer("newSound", Name, targetParent, ID, Pitch, Volume, loopEnabled)
                         v:FireServer("playSound", Name)
                         
                         playedSuccessfully = true
@@ -575,7 +616,13 @@ local function CreateFullUI()
             
             for _, remote in ipairs(remoteEvents) do
                 local success = pcall(function()
-                    remote:FireServer("newSound", soundName, workspace, 
+                    -- 使用隐藏文件夹作为音频父级
+                    local targetParent = workspace
+                    if soundSystem.UseHiddenFolder then
+                        targetParent = CreateHiddenAudioFolder()
+                    end
+                    
+                    remote:FireServer("newSound", soundName, targetParent, 
                                       "rbxassetid://"..musicID, pitch, volume, loopEnabled)
                     remote:FireServer("playSound", soundName)
                 end)
@@ -669,7 +716,7 @@ local function CreateFullUI()
         BoostProtectionManager:StopAllProtections()
     end)
 
-    print("✅ 最终修复版音乐播放器UI已加载 - 完全原始代码模式！")
+    print("✅ 音频隐藏版音乐播放器UI已加载 - 音频将隐藏在 EnvironmentAssets/AmbientSystems/AssetCache 文件夹中！")
     return screenGui
 end
 
@@ -681,5 +728,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("🎵 音乐播放器已就绪 - M模式+Boost将使用完全原始代码，无保护机制！")
+    print("🎵 音乐播放器已就绪 - 音频隐藏功能已启用！")
 end
